tests/paczka1/fuzzy1/81011913.err
Error in line 12: kab62aSnwv A443 40,8
Error in line 21: Vu4dwyiUoa A443 19,00
Error in line 29: 6E3iXFKa °303 20,7
Error in line 28: 6E3iXFKa A303 45,9
